fix: header shifting when scrollbar appearing

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -5,8 +5,10 @@
   top: 0px;
   max-height: $header-max-height;
   background-color: $color-primary;
-  padding: 15px 0;
-  transition: background 0.5s, padding 0.4s;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: calc(100vw - 100%);
+  transition: background 0.5s, padding-top 0.4s, padding-bottom 0.4s;
 
   .language {
     background-color: $color-secondary;
@@ -18,13 +20,20 @@
     background-color: $color-secondary;
   }
 
+  @media (hover: none) {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
   @include mobile {
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
 
 .sticky {
-  padding: 0;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: $color-secondary;
 
   .inverted {
